k8s-configs/ping-cloud/base/pingaccess/admin/cloud-generic/ingress.yaml
# This defines the private ingress for the pingaccess admin service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-admin-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - pingaccess-admin-api-dev.ping-demo.com
  rules:
    - host: pingaccess-admin-api-dev.ping-demo.com
      http:
        paths:
          # This rule gives internal access to the pingaccess admin services.
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pingaccess-admin
                port:
                  number: 9000
